# vendingmachine

./: .pre-commit-config.yaml  README.md  SQLsetup.py  SQLsetup.sql  app.py  config.py  identifier.sqlite  pyproject.toml  run.py  sonar-project.properties  test.sh
.github/workflows/: python-tests.yml
app/: models.py  routes.py
app/utils/: SQLsetup.sql  test.sh
tests/: test_db.py  test_flask.py  test_models.py  test_routes.py
utils/: test.sh
